--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table  bgcolor="yellow" border="1">
+	<table  bgcolor="yellow" border="1" border color="solid black">
+		Student Details
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
