--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table  bgcolor="yellow" border="1" border color="solid black">
+	<center><table  bgcolor="yellow" border="1" border color="solid black">
 		Student Details
 		<tr>
 			<th>NAME</th>
@@ -25,7 +25,7 @@
 			<td>21</td>
 			<td>ESE</td>
 		</tr>
-	</table>
+	</table></center>
 	
     <script type="text/javascript" src="./script.js">
 </script>
