--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<center><table  bgcolor="yellow" border="1" border color="solid black">
-		Student Details
+		<caption style="caption-side: top; font-weight: bold;">Student Details</caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
