--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<center><table  bgcolor="yellow" border="1" border color="solid black">
+	<table  bgcolor="yellow" border="1" border color="solid black">
 		<caption style="caption-side: top; font-weight: bold;">Student Details</caption>
 		<tr>
 			<th>NAME</th>
@@ -25,7 +25,7 @@
 			<td>21</td>
 			<td>ESE</td>
 		</tr>
-	</table></center>
+	</table>
 	
     <script type="text/javascript" src="./script.js">
 </script>
