--- a/main.html
+++ b/main.html
@@ -8,13 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table  bgcolor="yellow" border="1" border color="solid black">
-		<caption style="caption-side: top; font-weight: bold;">Student Details</caption>
-		<tr>
+	<table>
+		<caption >Student Details</caption>
+		<thead><tr>
 			<th>NAME</th>
 			<th>AGE</th>
 			<th>BRANCH</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>Shaw</td>
 			<td>20</td>
@@ -25,6 +27,7 @@
 			<td>21</td>
 			<td>ESE</td>
 		</tr>
+		</tbody>
 	</table>
 	
     <script type="text/javascript" src="./script.js">
